# kyoumi-lang

./: README.md  dune-project  kyoumi_lang.opam  main.kyoumi
lib/kyoumiCli/: Ccommon.ml  Ckyoumi.ml  Ckyoumic.ml  dune  kyoumiCli.ml
lib/kyoumiFrontend/: dune  kyoumiAst.ml  kyoumiCallingGraph.Fallback.ml  kyoumiCallingGraph.Multicore.ml  kyoumiCreate.ml  kyoumiError.ml  kyoumiFrontend.ml  kyoumiLexer.mll  kyoumiParser.messages  kyoumiParser.mly  kyoumiParserToken.ml  kyoumiTypechecker.ml  kyoumiUtil.ml
lib/util/: convertion.ml  dune  graph.ml  position.ml  ulist.ml  util.ml
test/: dune
