;**********************************************************************************************;
;*                                                                                            *;
;* This file is part of Kyoumi                                                                *;
;* Copyright (C) 2023 Yves Ndiaye                                                             *;
;*                                                                                            *;
;* Kyoumi is free software: you can redistribute it and/or modify it under the terms          *;
;* of the GNU General Public License as published by the Free Software Foundation,            *;
;* either version 3 of the License, or (at your option) any later version.                    *;
;*                                                                                            *;
;* Kyoumi is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY;        *;
;* without even the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR           *;
;* PURPOSE.  See the GNU General Public License for more details.                             *;
;* You should have received a copy of the GNU General Public License along with Kyoumi.       *;
;* If not, see <http://www.gnu.org/licenses/>.                                                *;
;*                                                                                            *;
;**********************************************************************************************;

(ocamllex
 (modules kyoumiLexer))

(menhir
 (modules kyoumiParser)
 (flags --table --explain)
 (infer true))

 (rule
 (target new.messages)
 (deps
  (:parser kyoumiParser.mly))
 (action
  (with-stdout-to
   %{target}
   (run menhir %{parser} --base %{parser} --list-errors))))

(rule
 (target updated.messages)
 (deps
  (:parser kyoumiParser.mly)
  (:msg kyoumiParser.messages))
 (action
  (with-stdout-to
   %{target}
   (run menhir %{parser} --base %{parser} --update-errors %{msg}))))

(rule
 (target kyoumiParser.messages.updated)
 (deps
  (:parser kyoumiParser.mly)
  (:new new.messages)
  (:updated updated.messages))
 (action
  (with-stdout-to
   %{target}
   (run
    menhir
    %{parser}
    --base
    %{parser}
    --merge-errors
    %{new}
    --merge-errors
    %{updated}))))

(rule
 (targets kyoumiParserMessage.ml)
 (deps kyoumiParser.messages kyoumiParser.mly)
 (action
  (with-stdout-to
   %{targets}
   (run menhir --compile-errors %{deps}))))


(library 
 (name kyoumiFrontend)
 (libraries util menhirLib
 (select kyoumiCallingGraph.ml from 
  (domainslib -> kyoumiCallingGraph.Multicore.ml)
  (-> kyoumiCallingGraph.Fallback.ml)
  )
 ))
